--- a/src/html/main.html
+++ b/src/html/main.html
@@ -4,15 +4,22 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>錦囊妙計</title>
 <link type="text/css" href="css/redmond/jquery-ui-1.8.12.custom.css" rel="stylesheet" />	
-<link href="css/style.css" rel="stylesheet" type="text/css" />
+<link type="text/css" href="css/style.css" rel="stylesheet" />
+
 <script type="text/javascript" src="js/jquery-1.5.1.min.js"></script>
 <script type="text/javascript" src="js/jquery-ui-1.8.12.custom.min.js"></script>
-<!-- Google Map API v3 -->
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
-<!-- END Google Map API v3 -->
+<script type="text/javascript" src="js/timemap/lib/mxn/mxn.js?(googlev3)"></script> 
+<script type="text/javascript" src="js/timemap/lib/timeline-2.3.0.js"></script>
+<script type="text/javascript" src="js/timemap/src/timemap.js"></script>
+<script type="text/javascript" src="js/timemap/src/loaders/json.js"></script> 
 <script type="text/javascript" src="js/map.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
-
+<script type="text/javascript">
+	//Global vars
+	var uname = "{{username}}";
+	
+</script>
 </head>
 
 <body>
@@ -41,14 +48,17 @@
                 {% endif %}
             </div>
             <div style="display:inline-block">
-              	<input type="checkbox" id="moreToggle" /><label for="moreToggle">More</label>
+              	<input type="checkbox" id="moreToggle" /><label for="moreToggle">時間軸</label>
            	</div>
         </div>
 	</div>
+
+	<div id="timelinecontainer"> 
+	    <div id="timeline" class="hideBack"></div> 
+	</div> 
 	<div class="map">
 		<div id="map_canvas" style="width: 100%; height: 100%;"></div> 
 	</div>
-	
 	<!--
     <div id="tabs" class="tabs">
 		<ul>
@@ -98,15 +108,19 @@
   			<textarea name="message" id="message" cols="30" rows="5" class="text ui-widget-content ui-corner-all" style="resize: none;"></textarea>
             <div id="radio">
             	屬性
-                <input type="radio" id="radio1" name="type"  value="0" /><label for="radio1">公共</label>
-                <input type="radio" id="radio2" name="type" checked="checked" value="1" /><label for="radio2">好友</label>
-                <input type="radio" id="radio3" name="type" value="2" /><label for="radio3">我的</label>
+                <input type="radio" id="radio1" name="type" value="0" /><label for="radio1">公共</label>
+                <input type="radio" id="radio2" name="type" value="1" /><label for="radio2">好友</label>
+                <input type="radio" id="radio3" name="type" checked="checked" value="2" /><label for="radio3">我的</label>
             </div>
+            <label for="from">From</label>
+			<input type="text" id="from" name="start" class="text ui-widget-content ui-corner-all" />
+			<label for="to">To</label>
+			<input type="text" id="to" name="end" class="text ui-widget-content ui-corner-all" />
         </fieldset>
         </form>
     </div>
     
-    <div id="rightMenu" class="ui-widget-header ui-corner-all widgets">
+    <div id="rightMenu" class="rightMenu">
     	{% if username == "guest" %}
     	<a href="{{logIOurl}}" id="logBtn2">登入</a>之後，就可留下訊息
     	{% else %}
