--- a/src/html/main.html
+++ b/src/html/main.html
@@ -5,15 +5,20 @@
 <title>錦囊妙計</title>
 <link type="text/css" href="css/redmond/jquery-ui-1.8.12.custom.css" rel="stylesheet" />	
 <link type="text/css" href="css/style.css" rel="stylesheet" />
+<link type="text/css" href="css/colorbox.css" rel="stylesheet" /> 
 
-<script type="text/javascript" src="js/jquery-1.5.1.min.js"></script>
-<script type="text/javascript" src="js/jquery-ui-1.8.12.custom.min.js"></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script> 
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.13/jquery-ui.min.js"></script>
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+
 <script type="text/javascript" src="js/timemap/lib/mxn/mxn.js?(googlev3)"></script> 
 <script type="text/javascript" src="js/timemap/lib/timeline-2.3.0.js"></script>
 <script type="text/javascript" src="js/timemap/src/timemap.js"></script>
 <script type="text/javascript" src="js/timemap/src/loaders/json.js"></script> 
 <script type="text/javascript" src="js/timemap/src/manipulation.js"></script> 
+
+<script type="text/javascript" src="js/colorbox/jquery.colorbox-min.js"></script> 
+
 <script type="text/javascript" src="js/map.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 <script type="text/javascript">
@@ -62,7 +67,7 @@
 		{% else %}
 		<a href="{{logIOurl}}" id="logBtn" class="toolbarBtn utilBtn">登出</a>
 		{% endif %}
-		<button id="about" class="toolbarBtn utilBtn">關於</button>
+		<a href="#" id="about" class="toolbarBtn utilBtn">關於</a>
         <button id="config" class="toolbarBtn utilBtn" onclick="notyet()">設定</button>
 	</div>
 
@@ -103,6 +108,13 @@
         <button id="new" class="menuBtn">留下訊息</button> <br/>
         <button id="other" class="menuBtn">Have fun</button>
         {% endif %}
+    </div>
+    
+    <div style="display: none;">
+	    <div class="aboutBox" id="aboutBox">
+	    	<iframe src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.com%2Fapps%2Fapplication.php%3Fid%3D116735828415506&amp;width=300&amp;colorscheme=light&amp;show_faces=true&amp;border_color&amp;stream=false&amp;logobar=0&amp;header=false&amp;height=310" 
+	    	scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:300px; height:310px;" allowTransparency="true"></iframe>
+	    </div>
     </div>
 <!-- Widgets end -->    
 </div>
